# unicode_bot

./: .gitignore  Cargo.toml  README.md  bot.toml.sample  build.rs
src/: main.rs  messages.rs  unicode.rs
