[package]
name = "unicode_bot"
version = "0.2.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1"
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
charname = "0.2"
tg_botapi = "0.6.0-alpha.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
quicli = "0.4"
structopt = "0.2"
