[package]
name = "unicode_bot"
version = "0.2.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.5", features = ["rt-core", "rt-threaded", "macros"] }
futures = "0.3.0"
charname = "0.2.1"
tg_botapi = "0.6.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
quicli = "0.4"
structopt = "0.2"
