[package]
name = "unicode_bot"
version = "0.2.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.0"
charname = "0.2"
tg_botapi = "0.8"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
quicli = "0.4"
structopt = "0.3"
